k8s/oficinamecanica-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficinamecanica-api
  labels:
    app: oficinamecanica-api
spec:
  type: ClusterIP
  selector:
    app: oficinamecanica-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
